# python-agentspeak

./: .gitignore  AUTHORS.rst  HISTORY.rst  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tests.yml
agentspeak/: runtime.py  stdlib.py
tests/: test_stdlib.py
tests/asl/: introspection.asl  plan-library.asl  send-ask.asl
